.pre-commit-config.yaml: Enable more hooks.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,18 +5,17 @@ repos:
       - id: parsable-R
       - id: no-browser-statement
       - id: no-debug-statement
-#      - id: deps-in-desc
-
+      - id: deps-in-desc
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
-#      - id: trailing-whitespace
+      - id: trailing-whitespace
       - id: check-yaml
       - id: check-merge-conflict
         args: [ --assume-in-merge ]
       - id: check-added-large-files
         args: ['--maxkb=200']
       - id: file-contents-sorter
-        files: '\.Rbuildignore|\.Rinstignore$'
-#      - id: end-of-file-fixer
-#        exclude: '(\.Rd|python/doc/source/reference/.*|test-doctest-.*)'
+        files: '^(\.Rbuildignore|\.Rinstignore)$'
+      - id: end-of-file-fixer
+        exclude: '(\.Rd|python/doc/source/reference/.*|test-doctest-.*)'
